[project]
name = "learning-voice-ai-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.5",
    "openai>=2.8.1",
    "pyaudio>=0.2.14",
    "pyttsx3==2.90",
    "speechrecognition==3.14.3",
    "wikipedia>=1.4.0",
]
